//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  book Book [not null]
  shelf Shelf [not null]
}

Table Book {
  id String [pk]
  bookUniId String [not null]
  itemId String [not null]
  ownerId String [not null]
  curVersion String [not null]
  progress String [not null]
  percnetage Int [not null]
  format epubFormat [not null]
  status dispatchStatus [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  owner User [not null]
  item Item [not null]
  shelf Shelf [not null]

  indexes {
    (bookUniId, ownerId) [unique]
  }
}

Table Shelf {
  id String [pk]
  name String [not null]
  ownerId String [not null]
  owner User [not null]
  book Book [not null]
}

Table Item {
  id String [pk]
  sub String
  info Json [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  book Book [not null]
  category Category
  contributor Contributor
}

Table Category {
  sub String [pk]
  name String [not null]
  isActive Boolean [not null, default: true]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  item Item [not null]
}

Table Contributor {
  id String [pk]
  author String [not null]
  illustrator String [not null]
  editor String [not null]
  translator String [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  item Item [not null]
}

Table BookToShelf {
  shelfId String [ref: > Shelf.id]
  bookId String [ref: > Book.id]
}

Enum Role {
  ADMIN
  USER
}

Enum epubFormat {
  reflowable
  fixedlayout
}

Enum dispatchStatus {
  readable
  forbidden
}

Ref: Book.ownerId > User.id

Ref: Book.itemId > Item.id

Ref: Shelf.ownerId > User.id

Ref: Item.sub > Category.sub

Ref: Contributor.id - Item.id